--- a/CliMultiLinkBuilder/CliMultiLinkBuilder.csproj
+++ b/CliMultiLinkBuilder/CliMultiLinkBuilder.csproj
@@ -1,8 +1,10 @@
 <Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <OutputType>Exe</OutputType>
-    <TargetFramework>netcoreapp2.1</TargetFramework>
+    <OutputType>WinExe</OutputType>
+    <TargetFramework>netcoreapp2.2</TargetFramework>
+    <ApplicationIcon />
+    <StartupObject>CliMultiLinkBuilder.Program</StartupObject>
   </PropertyGroup>
 
   <ItemGroup>
